<resources>
    <string name="app_name">BookStore</string>
    <string name="APPKEY">1a96ba0e16400</string>
    <string name="APPSECRET">89222288c7ddfd70b26e4770e46d6e01</string>
    <string name="APPID">e5829069f0afbd7f1d47ddb00c26a0b2</string>
    <string name="title">书名</string>
    <string name="author">作者</string>
    <string name="price">价格</string>
    <string name="describe">商品的描述</string>
    <string name="yuan">￥</string>
    <string name="press">出版社</string>
    <string name="category">分类</string>
    <string name="comment">商品评论</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="register">注册新用户</string>
    <string name="product">商品</string>
    <string name="submit_verify_code">提交验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="find_password">找回密码</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="commit_new_password">确认修改</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="register_now"><![CDATA[立即注册>]]></string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="cart">购物车</string>
    <string name="select_all">全选</string>
    <string name="total_price">合计:</string>
    <string name="seller">卖家</string>
    <string name="edit">编辑</string>
    <string name="phone">手机号码</string>
    <string name="verify_code">验证码</string>
    <string name="input_new_password">请输入新密码</string>
    <string name="password_limit">密码:6-20个字母或数字</string>
    <string name="finish">完成</string>
    <string name="reset_password">重设密码</string>
    <string name="buying">立即购买</string>
    <string name="user_id">用户ID</string>
    <string name="comment_grade">评价等级：</string>
    <string name="comment_time">评论时间</string>
    <string name="comment_string">评论内容</string>
    <string name="delete">删除</string>
    <string name="username">用户名</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部</string>
    <string name="obligation">待付款</string>
    <string name="delivering">待发货</string>
    <string name="receiving">待收货</string>
    <string name="commenting">待评价</string>
    <string name="returning">退款</string>
    <string name="order_state">订单状态</string>
    <string name="product_count">商品数量</string>
    <string name="order_pro_total">共0件商品</string>
    <string name="confirm_received">确认收货</string>
    <string name="order_detail">查看详情</string>
    <string name="receive_location">我的收货地址</string>
    <string name="commit_problem">问题反馈</string>
    <string name="logout">退出当前账户</string>
    <string name="setting">设置</string>
    <string name="user_profile">个人资料</string>
    <string name="user_header">用户头像</string>
    <string name="sex">性别</string>
    <string name="sex_man">男</string>
    <string name="major_network">网络工程</string>
    <string name="grade">年级</string>
    <string name="grade_default">大一</string>
    <string name="modify_username">修改用户名</string>
    <string name="default_order">默认</string>
    <string name="search_product">搜索商品</string>
    <string name="screen">筛选</string>
    <string name="search">搜索</string>
    <string name="count">库存</string>
    <string name="buy_count">购买数量</string>
    <string name="pro_count_1">1</string>
    <string name="commit">确认</string>
    <string name="filter">筛选</string>
    <string name="major">专业</string>
    <string name="more">卖家简介</string>
    <string name="location">地址</string>
    <string name="pay_order">确认订单</string>
    <string name="receiver">收货人</string>
    <string name="receiver_location">收货地址</string>
    <string name="send_way">配送方式</string>
    <string name="buyer_comment">买家留言:</string>
    <string name="order_commit">提交订单</string>
    <string name="order_done">完成</string>
    <string name="pro_edit">商品信息编辑</string>
    <string name="add_pro">添加商品</string>
    <string name="my_store">我的商店</string>
    <string name="order_manage">订单管理</string>
    <string name="buyer">买家</string>
    <string name="deliver">发货</string>
    <string name="order_id">订单号:</string>
    <string name="submit_time">下单时间:2017-02-01 08:01:12</string>
    <string name="order_comment">评价</string>
    <string name="courier_id">快递单号</string>
    <string name="seller_comment">卖家留言</string>
    <string name="input_courier_id">请输入快递单号</string>
    <string name="input_order_comment">请输入商品的评论</string>
    <string name="input_order_buyer_comment">请输入卖家留言</string>
    <string name="commit_order_comment">提交评价</string>
    <string name="receive">收货</string>
    <string name="buyer_order_request">买家留言</string>
</resources>
