<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/iv_comment_user_img"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@mipmap/ic_user"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/tv_comment_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/user_id"
            android:textSize="16sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/comment_grade"
            android:textSize="16sp"
            android:textColor="@color/text_red"/>
        <TextView
            android:id="@+id/tv_comment_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="5"
            android:textSize="16sp"
            android:textColor="@color/text_red" />
    </LinearLayout>
    <TextView
        android:id="@+id/tv_comment_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/comment_time"
        android:textSize="14sp"
        android:textColor="@color/text_gray" />
    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment_string"
        android:textSize="18sp"
        android:textColor="@color/text_black" />
</LinearLayout>