<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/iv_pro_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/ic_launcher"
        android:padding="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="10dp">
        <TextView
            android:id="@+id/tv_pro_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/title"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tv_pro_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/author"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="15sp"
            android:textColor="#4b4b4b"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yuan"
                android:textSize="15sp"
                android:textColor="@color/red"/>
            <TextView
                android:id="@+id/tv_pro_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:maxLines="1"
                android:ellipsize="start"
                android:textSize="18sp"
                android:textColor="@color/red"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>