<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_order_manage_user_img"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:src="@mipmap/ic_user"
            android:button="@drawable/cart_checkbox"/>
        <TextView
            android:id="@+id/tv_order_manage_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_order_manage_user_img"
            android:layout_centerVertical="true"
            android:text="@string/buyer"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_toRightOf="@id/tv_order_manage_username"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_right_arrow"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/tv_order_manage_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/order_state"
            android:textSize="16sp"
            android:textColor="@color/text_red"/>
    </RelativeLayout>
    <com.project.zeng.bookstore.widgets.MyListView
        android:id="@+id/lv_order_manage_products"
        android:layout_width="match_parent"
        android:layout_height="100dp"></com.project.zeng.bookstore.widgets.MyListView>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color"></View>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/tv_order_manage_pro_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_pro_total"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/total_price"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_order_manage_pros_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_total_price"
            android:layout_marginLeft="5dp"
            android:layout_alignParentBottom="true"
            android:text="@string/price"
            android:textColor="@color/text_black"
            android:textSize="17sp"/>
        <Button
            android:id="@+id/btn_order_manage_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_gray_line"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/order_detail"
            android:textSize="15sp"
            android:textColor="@color/text_gray" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divide_color"></View>
</LinearLayout>