<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    >
    <ImageView
        android:id="@+id/iv_add_cart_pro_img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:padding="4dp"
        android:background="@color/background_gray"
        android:src="@mipmap/ic_user"/>
    <TextView
        android:id="@+id/tv_add_cart_pro_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_add_cart_pro_img"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/price"
        android:textSize="20sp"
        android:textColor="@color/text_red"/>
    <TextView
        android:id="@+id/tv_add_cart_pro_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_add_cart_pro_img"
        android:layout_below="@id/tv_add_cart_pro_price"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:text="@string/count"
        android:textSize="18sp"
        android:textColor="@color/text_black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_add_cart_pro_img"
        android:layout_margin="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/buy_count"
        android:textSize="20sp"
        android:textColor="@color/text_black"/>
    <ImageView
        android:id="@+id/iv_add_cart_pro_plus"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_plus"
        android:background="@color/background_gray"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:padding="10dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/et_add_cart_pro_count"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_toLeftOf="@id/iv_add_cart_pro_plus"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="65dp"
        android:gravity="center"
        android:text="@string/pro_count_1"
        android:textSize="18sp"
        android:textColor="@color/text_black"/>
    <ImageView
        android:id="@+id/iv_add_cart_pro_minus"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_minus"
        android:background="@color/background_gray"
        android:layout_toLeftOf="@id/et_add_cart_pro_count"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_centerVertical="true"
        android:padding="10dp"/>
    <TextView
        android:id="@+id/tv_add_cart_commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/background_orange"
        android:text="@string/commit"
        android:gravity="center"
        android:textColor="@color/background_gray"
        android:textSize="20sp"
        />
</RelativeLayout>