<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradual_change_shape">
        <ImageView
            android:id="@+id/iv_seller_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="8dp"
            android:background="@mipmap/ic_back"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_seller_back"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:text="卖家"
            android:textSize="20sp"
            android:textColor="@color/text_black"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">
        <ImageView
            android:id="@+id/iv_seller_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_user"/>
        <TextView
            android:id="@+id/tv_seller_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_seller_img"
            android:layout_marginStart="10dp"
            android:text="@string/user_id"
            android:textSize="19sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/tv_seller_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_seller_img"
            android:layout_below="@id/tv_seller_id"
            android:layout_marginTop="2dp"
            android:layout_marginStart="10dp"
            android:text="@string/username"
            android:textSize="20sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/tv_seller_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_seller_img"
            android:layout_below="@id/tv_seller_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/grade"
            android:textSize="21sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/tv_seller_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/iv_seller_img"
            android:layout_below="@id/tv_seller_grade"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/major"
            android:textSize="22sp"
            android:textColor="@color/text_black"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divide_color"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="22sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/tv_seller_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/phone"
            android:textSize="20sp"
            android:textColor="@color/text_gray"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divide_color"></View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="22sp"
            android:textColor="@color/text_black"/>
        <TextView
            android:id="@+id/tv_seller_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/location"
            android:textSize="20sp"
            android:textColor="@color/text_black"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/divide_color"></View>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:background="@color/background_gray"
        android:text="@string/more"
        android:textSize="22sp"
        android:textColor="@color/text_black"/>
    <TextView
        android:id="@+id/tv_seller_more"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/background_gray"
        android:text="@string/more"
        android:textSize="21sp"
        android:textColor="@color/text_black"/>
</LinearLayout>